--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,16 @@
 <html>
-<body>
-<h1>Hello from a node js app</h1>
+  <head>
+    <title>Fine Whiskeys</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  </head>
+  <body>
+    <header>
+      <h1>Fine Whiskey Company Ltd</h1>
+      <div>
+
+      </div>
+    </header>
+
 </body>
 </html>
