Change endpoint to play well with proxy

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -4,14 +4,14 @@
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.4/lodash.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="/public/scripts/shop.js"></script>
-    <link rel="stylesheet" href="/public/style/main.css" />
+    <script src="/app/public/scripts/shop.js"></script>
+    <link rel="stylesheet" href="/app/public/style/main.css" />
   </head>
   <body>
     <div class="container">
     <header>
       <h1>The Mighty Fine Whiskey Company Ltd</h1>
-      <p><a href="/">Continue shopping</a></p>
+      <p><a href="/app">Continue shopping</a></p>
     </header>
     <section class="cart-receiver">
     </section>
