Fix broken link

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -51,7 +51,7 @@
       <button class="purchase" onclick="make_purchase()">Buy Now</button>
       </div>
       {{else}}
-        <p class="emptycart">Your cart is empty! <a href="/">return to the catalogue</a></p>
+        <p class="emptycart">Your cart is empty! <a href="/mighty-fine">return to the catalogue</a></p>
       {{/if}}
     </script> 
     
